# denoiset

./: LICENSE  README.md  pyproject.toml
src/denoiset/: args.py  blocks.py  curation.py  dataio.py  dataset.py  inference.py  model.py  settings.py  tracker.py  training.py  transform.py
src/denoiset/cli/: curate.py  denoise3d.py  predict3d.py  train3d.py
tests/: input_names.txt  test_dataio.py  test_dataio.py~  test_dataset.py  test_inference.py  test_model.py  test_transform.py
